# ARCs

./: .arckit.jsonc  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  ARC-template.md  CNAME  Gemfile  README.md  _config.yml  all.html  arc-0040.md  arc-template.md  index.html
.github/: arc-editor-guidelines.md  ci-cd-release-specs.md  dependabot.yaml  release-guidelines.md
.github/DISCUSSION_TEMPLATE/: pre-arc.md  pre-arc.yml
.github/ISSUE_TEMPLATE/: arc-tracking.md
.github/PULL_REQUEST_TEMPLATE/: arc-adoption-or-implementation.md  arc-draft.md  arc-edit.md  arc-final.md  arc-last-call.md  arc-review.md
.github/scripts/: build-arckit-release.sh  check-text-hygiene.sh  lychee_report.mjs  maintenance.mjs  pr-governance.mjs
.github/workflows/: arckit-release.yml  auto-label-bot.yml  ci.yaml  dev-portal-content.yml  dev-portal-pr.yml  monthly-maintenance.yml  post-ci.yaml  pr-governance.yml  pr-validation.yml  stale.yaml
ARCs/: ARC-44.md  CAS.json  Incentivizing Participation Nodes Via xGov Rewards.  arc-0000.md  arc-0001.md  arc-0002.md  arc-0003.md  arc-0004.md  arc-0005.md  arc-0006.md  arc-0007.md  arc-0008.md  arc-0009.md  arc-000N.md  arc-0010.md  arc-0011.md  arc-0012.md  arc-0013.md  arc-0014.md  arc-0015.md  arc-0015_v2.md  arc-0016.md  arc-0017.md  arc-0018.md  arc-0019.md  arc-0020.md  arc-0021.md  arc-0022.md  arc-0023.md  arc-0024.md  arc-0025.md  arc-0026-k.md  arc-0026.md  arc-0027.md  arc-0028.md  arc-0029.md  arc-0030.md  arc-0031.md  arc-0032.md  arc-0033.md  (+92 more)
_archive/: Gemfile  index.html
_archive/_includes/: head.html  social.html
_archive/config/: .jekyll-labels.yml
_devportal/content/: arc-0000.md  arc-0001.md  arc-0002.md  arc-0003.md  arc-0004.md  arc-0005.md  arc-0006.md  arc-0007.md  arc-0008.md  arc-0009.md  arc-0010.md  arc-0011.md  arc-0012.md  arc-0015.md  arc-0016.md  arc-0018.md  arc-0019.md  arc-0020.md  arc-0021.md  arc-0022.md  arc-0023.md  arc-0025.md  arc-0026.md  arc-0027.md  arc-0028.md  arc-0032.md  arc-0033.md  arc-0034.md  arc-0035.md  arc-0036.md  arc-0042.md  arc-0047.md  arc-0048.md  arc-0049.md  arc-0053.md  arc-0054.md  arc-0055.md  arc-0056.md  arc-0059.md  arc-0060.md  (+19 more)
_devportal/scripts/: guidelines_template.md  index_template.md  update-arcs.sh  update-guideline.sh  (+1 more)
_includes/: arcnums.html  arctable.html
_layouts/: arc.html
_site/: 404.html  all.html  feed.xml  index.html
adoption/: README.md  arc-0001.yaml  arc-0002.yaml  arc-0003.yaml  arc-0004.yaml  arc-0005.yaml  arc-0006.yaml  arc-0007.yaml  arc-0008.yaml  arc-0009.yaml  arc-0010.yaml  arc-0011.yaml  arc-0015.yaml  arc-0016.yaml  arc-0018.yaml  arc-0019.yaml  arc-0020.yaml  arc-0021.yaml  arc-0022.yaml  arc-0023.yaml  arc-0025.yaml  arc-0026.yaml  arc-0027.yaml  arc-0028.yaml  arc-0032.yaml  arc-0033.yaml  arc-0034.yaml  arc-0035.yaml  arc-0036.yaml  arc-0042.yaml  arc-0047.yaml  arc-0048.yaml  arc-0049.yaml  arc-0053.yaml  arc-0054.yaml  arc-0055.yaml  arc-0056.yaml  arc-0059.yaml  arc-0062.yaml  arc-0065.yaml  (+12 more)
arckit/: README.md  ci-cd-release-spec.md  go.mod  go.sum  specs.md  tech-stack.md
assets/arc-0020/: .algokit.toml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
assets/arc-0020/smart_contracts/: __main__.py  errors.py  types.py
assets/arc-0020/smart_contracts/_helpers/: build.py  config.py
assets/arc-0020/smart_contracts/artifacts/smart_asa/: SmartAsa.approval.puya.map  SmartAsa.approval.teal  SmartAsa.arc32.json  SmartAsa.arc56.json  SmartAsa.clear.puya.map  SmartAsa.clear.teal  smart_asa_client.py
assets/arc-0020/smart_contracts/smart_asa/: config.py  contract.py  deploy_config.py
assets/arc-0020/tests/: conftest.py  test_account_freeze.py  test_asset_close_out.py  test_asset_config.py  test_asset_create.py  test_asset_destroy.py  test_asset_freeze.py  test_asset_opt_in.py  test_asset_transfer.py  test_deploy.py  test_get_circulating_supply.py  utils.py
assets/arc-0062/: .algokit.toml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
assets/arc-0062/.algokit/generators/create_contract/smart_contracts/{{ contract_name }}/: deploy_config.py.j2
assets/arc-0062/.algokit/generators/create_env_file/: {% if is_testnet %}.env.testnet{% endif %}
assets/arc-0062/.algokit/static-analysis/snapshots/: CirculatingSupply.approval.json  CirculatingSupply.clear.json
assets/arc-0062/smart_contracts/: __main__.py
assets/arc-0062/smart_contracts/_helpers/: build.py  deploy.py
assets/arc-0062/smart_contracts/artifacts/circulating_supply/: CirculatingSupply.approval.puya.map  CirculatingSupply.approval.teal  CirculatingSupply.arc32.json  CirculatingSupply.arc56.json  CirculatingSupply.clear.teal  circulating_supply_client.py
assets/arc-0062/smart_contracts/circulating_supply/: config.py  contract.py  deploy_config.py
assets/arc-0062/smart_contracts/errors/: std_errors.py
assets/arc-0062/tests/: conftest.py  test_deploy.py  test_get_circulating_supply.py  test_set_asset.py  test_set_not_circulating_address.py
assets/arc-0089/projects/arc-0089/: .algokit.toml  README.md  pyproject.toml
assets/arc-0089/projects/arc-0089/.algokit/: .copier-answers.yml
assets/arc-0089/projects/arc-0089/.algokit/generators/create_contract/: copier.yaml
assets/arc-0089/projects/arc-0089/.algokit/generators/create_contract/smart_contracts/{{ contract_name }}/: contract.py.j2  deploy_config.py.j2
assets/arc-0089/projects/arc-0089/.algokit/generators/create_env_file/: copier.yaml
assets/arc-0089/projects/arc-0089/.tours/: getting-started-with-your-algokit-project.tour
assets/arc-0089/projects/arc-0089/smart_contracts/: __main__.py
assets/arc-0089/projects/arc-0089/smart_contracts/artifacts/recovery/: Recovery.approval.puya.map  Recovery.approval.teal  Recovery.arc56.json  recovery_client.py
assets/arc-0089/projects/arc-0089/smart_contracts/recovery/: contract.py  deploy_config.py
assets/arc-0089/projects/arc-0089/tests/: conftest.py  recovery_client_test.py  recovery_test.py
config/: .jekyll-labels.yml
pages/: nfts.md  wallets.md
templates/: arc.template.md  arc.template.yaml
(+377 files in other folders)
